--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -6,6 +6,9 @@ metadata:
   namespace: test
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: readycheck
   strategy:
     rollingUpdate:
       maxSurge: 1
