--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -8,7 +8,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: readycheck
+      app: octank-invogue
   strategy:
     rollingUpdate:
       maxSurge: 1
